# node-gd

./: .gitignore  .npmignore  .prebuildrc  .travis.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTORS.md  Dockerfile  LICENSE  README  README.md  binding.gyp  docker-test.sh  gd.js  gd_bindings.cc  index.d.ts  index.js  node-gd.cc  node-gd.js  package-lock.json  package.json  test.js  travis-linux-deps.sh  travis-osx-deps.sh  util.sh  wscript
.github/workflows/: prebuild.yml  prebuild_macos.yml  run-tests.yml
coffee/: node-gd.coffee
cpp/: CreateFromFileWorker.cc  addon.cc  createworker.cc  fileworker.cc  node-gd.cpp  node_gd.cc  node_gd.h  node_gd_workers.cc
doc/: README.md
docs/: index.md
js/: bindings.js  node-gd.js
lib/: GifAnim.js  bindings.js  node-gd.js
src/: addon.cc  node_gd.cc  node_gd.h  node_gd_workers.cc
test/: 00-heif-avif.test.mjs  colormatch.test.js  colormatch.test.mjs  destroy.test.js  destroy.test.mjs  dirname.mjs  file-types.js  file-types.test.js  file-types.test.mjs  fonts-and-images.js  fonts-and-images.test.js  fonts-and-images.test.mjs  gifanim.test.js  gifanim.test.mjs  heif-avif.test.mjs  image-creation.js  image-creation.test.js  image-creation.test.mjs  image-pointer.test.js  image-pointer.test.mjs  main.test.js  main.test.mjs  memory.js  memory.test.js  openfile.test.js  openfile.test.mjs  query-image-info.js  query-image-info.test.js  query-image-info.test.mjs  test.coffee  test.js  tiff.js  tiff.test.js  tiff.test.mjs
test/fixtures/: input.heif  input.tif
test/output/: .gitignore
